# lanex

./: .dockerignore  .gitignore  Dockerfile  NOTICE  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/workflows/: ci.yml  differential.yml  docker-publish.yml
docs/: RELEASE.md
lanex/: __init__.py  __main__.py  _version.py  cli.py
lanex/controller/: __init__.py  alerts.py  appwindow.py  autoconfig.py  bundle.py  cells.py  compat.py  container_run.py  container_tools.py  customcells.py  custommacros.py  designs.py  desktop.py  dse.py  editor.py  events.py  fsbrowser.py  history.py  installer.py  introspect.py  layout2d.py  layout3d.py  lint.py  manualcmd.py  models.py  pdk.py  platform_env.py  plugins.py  plugins_registry.json  provenance.py  reports.py  reverify.py  runner.py  runtimings.py  scaffold.py  simulate.py  timing.py  tools.py  verify.py  waveview.py
lanex/controller/templates/blinky/: template.json
lanex/controller/templates/blinky/src/: blinky.v
lanex/controller/templates/blinky/verify/: blinky_tb.v
lanex/controller/templates/counter/: template.json
lanex/controller/templates/counter/src/: counter.v
lanex/controller/templates/counter/verify/: counter_tb.v
lanex/controller/templates/empty/: template.json
lanex/controller/templates/empty/src/: top.v
lanex/controller/templates/fifo/: template.json
lanex/controller/templates/fifo/src/: fifo.v
lanex/controller/templates/fifo/verify/: fifo_tb.v
lanex/controller/templates/multiplier/: template.json
lanex/controller/templates/multiplier/src/: mult.v
lanex/controller/templates/multiplier/verify/: mult_tb.v
lanex/server/: __init__.py  __main__.py  app.py  jsonsafe.py  routes.py  sse.py
lanex/server/static/: app.js  features.css  fonts.css  glossary.json  ide.css  ide.html  index.html  landing.css  landing.html  landing.js  manifest.json  styles.css
lanex/server/static/modules/: about.js  advisor.js  analytics.js  api.js  autoconfig.js  cells.js  charts.js  compare.js  config.js  csvutil.js  customcells.js  custommacros.js  density.js  dialog.js  dse.js  fileview.js  finalsettings.js  fs.js  fullscreen.js  help.js  hotkeys.js  icons.js  jumpnav.js  layouttools.js  learn.js  logdrawer.js  logs.js  manual.js  palette.js  pipeline.js  plugins.js  preflight.js  preview.js  provenance.js  runmode.js  runs.js  runscope.js  runtimeline.js  sdk.js  setup.js  (+18 more)
lanex/server/static/modules/ide/: editor.js  main.js  vcd.js  waves.js
lanex/tests/: conftest.py  frontend_test.mjs  test_accuracy_round47.py  test_accuracy_round52.py  test_alerts.py  test_appwindow.py  test_bundle_artifacts.py  test_cancel_container.py  test_ci_helpers.py  test_compat.py  test_container_run.py  test_custom_macros.py  test_dialog_scroll.py  test_display_derivations.py  test_dse_reverify.py  test_editor_lint_sim.py  test_export.py  test_failing_run.py  test_fixes_audit.py  test_fixes_gf180.py  test_fixes_round16.py  test_fixes_round17.py  test_fixes_round18.py  test_fixes_round2.py  test_fixes_round20.py  test_fixes_round21.py  test_fixes_round22.py  test_fixes_round25.py  test_fixes_round26.py  test_fixes_round27.py  test_fixes_round3.py  test_fixes_round4.py  test_fixes_round73.py  test_fixes_round74.py  test_fsbrowser.py  test_goldens.py  test_gtkwave.py  test_history.py  test_install_foolproof.py  test_install_script.py  (+20 more)
lanex/tests/goldens/clean_run/: resolved.json
lanex/tests/goldens/clean_run/01-yosys-synthesis/: state_out.json
lanex/tests/goldens/clean_run/final/: metrics.json
lanex/tests/goldens/display_run/: metrics.json
lanex/tests/goldens/failing_run/55-openroad-stapostpnr/: max.rpt
lanex/tests/goldens/failing_run/64-magic-drc/: spm.magic.rpt
lanex/tests/goldens/failing_run/70-netgen-lvs/: lvs.report
lanex/tests/goldens/failing_run/final/: metrics.json
lanex/tests/goldens/nonfinite_run/: resolved.json
lanex/tests/goldens/nonfinite_run/final/: metrics.json
lanex/tests/goldens/sim_run/: counter.v  dump.vcd  tb_counter.v
scripts/: archive-image.sh  ci-rtl2gds.sh  ci_rtl2gds_run.py  install-wsl.sh  install.sh  mirror-base.sh  release.sh  run-lanex.sh  vendor.sh
scripts/ci/: README.md  api_e2e.py  bundle_verify.py  compare_flat.py  csv_cross.py  differential_run.py  flatten_metrics.py  gtkwave_probe.py  hash_tree.py  layout_probe.py  leg_local_run.py  sse_capture.py  summary_static.py  test_summary.py
windows/: Launch-LanEx.bat  README.md  install-lanex-wsl.sh
