[build-system]
# >=64: reliable recursive `**/*` support in [tool.setuptools.package-data]
# globs, so nested frontend assets (modules/ide/*.js) and template files
# (templates/<name>/src/*.v, verify/*.v) are actually included in the wheel.
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lanex"
version = "1.0.0"
description = "LanEx — a zero-dependency browser cockpit & IDE for the LibreLane RTL→GDSII chip flow."
readme = "README.md"
# Matches LibreLane, which requires Python >=3.10.
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "AkshatIsWired", email = "akshatalt885@gmail.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
# The GUI controller uses only the standard library plus what `librelane`
# already pulls in. `librelane` itself is an *expected peer* (it is the host
# package the GUI plugs into), declared here so a standalone install is usable.
dependencies = ["librelane"]

[project.scripts]
lanex = "lanex.cli:main"

[tool.setuptools.packages.find]
include = ["lanex", "lanex.*"]

[tool.setuptools.package-data]
lanex = [
  # Frontend assets (recursive + a couple of explicit nested patterns as a
  # belt-and-suspenders for older build frontends).
  "server/static/**/*", "server/static/*",
  "server/static/modules/*.js", "server/static/modules/ide/*.js",
  "server/static/vendor/**/*",
  # Curated registries + project templates (nested src/ and verify/ included).
  "controller/*.json",
  "controller/templates/**/*",
  "controller/templates/*/*", "controller/templates/*/*/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = "lanex/.*"
extend-exclude = 'lanex/tests/.*|static/.*'
