[build-system]
# >=64: reliable recursive `**/*` support in [tool.setuptools.package-data]
# globs, so nested frontend assets (modules/ide/*.js) and template files
# (templates/<name>/src/*.v, verify/*.v) are actually included in the wheel.
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "lanex"
version = "1.0.0"
description = "LanEx — a zero-dependency browser cockpit & IDE for the LibreLane RTL→GDSII chip flow."
readme = "README.md"
# Matches LibreLane, which requires Python >=3.10.
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "AkshatIsWired", email = "akshatalt885@gmail.com" }
]
keywords = [
    "eda", "asic", "vlsi", "rtl", "gdsii", "librelane", "openlane",
    "openroad", "yosys", "sky130", "chip-design", "gui",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
# The GUI controller uses only the standard library plus what `librelane`
# already pulls in. `librelane` itself is an *expected peer* (it is the host
# package the GUI plugs into), declared here so a standalone install is usable.
# Floor = the tested baseline. Ceiling = the validated range's upper bound
# (mirrors controller/compat.py KNOWN_GOOD_MAX_EXCL): LanEx reaches past
# librelane's public CLI (FlowProgressBar patch, config introspection, the
# metrics vocabulary), so an untested future minor could break a FRESH install
# on arrival. Users plugging into an existing, newer librelane env still get an
# explicit compatibility banner from the startup probe rather than a hard stop.
# Release checklist: re-validate against each new librelane minor, then bump
# BOTH this ceiling and compat.KNOWN_GOOD_MAX_EXCL together.
# The container image tag is derived from the *installed* version at run time
# (see controller/container_run.image_ref), so the toolchain always matches.
dependencies = ["librelane>=3.0.4,<3.1"]

[project.urls]
Homepage = "https://github.com/AkshatIsWired/lanex"
Repository = "https://github.com/AkshatIsWired/lanex"
Issues = "https://github.com/AkshatIsWired/lanex/issues"

[project.scripts]
lanex = "lanex.cli:main"

[tool.setuptools]
# Ship LICENSE + NOTICE inside the wheel's dist-info so an installed (pipx/
# PyPI) copy carries its own attribution — /api/about reads NOTICE from there
# when the repo checkout isn't present.
license-files = ["LICENSE", "NOTICE"]

[tool.setuptools.packages.find]
include = ["lanex", "lanex.*"]
# Tests (incl. the golden-run corpus) stay in the repo; shipping them would
# fatten every install for no runtime benefit.
exclude = ["lanex.tests", "lanex.tests.*"]

[tool.setuptools.package-data]
lanex = [
  # Frontend assets (recursive + a couple of explicit nested patterns as a
  # belt-and-suspenders for older build frontends).
  "server/static/**/*", "server/static/*",
  "server/static/modules/*.js", "server/static/modules/ide/*.js",
  "server/static/vendor/**/*",
  # Curated registries + project templates (nested src/ and verify/ included).
  "controller/*.json",
  "controller/templates/**/*",
  "controller/templates/*/*", "controller/templates/*/*/*",
]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = "lanex/.*"
extend-exclude = 'lanex/tests/.*|static/.*'
